# adp-planner

./: .gitignore  README.md  idea.md  install.sh
kanban-tui/: README.md  board.css  board.py  main.py  process.md  pyproject.toml  storage.py
kanban-tui/kanban_terminal.egg-info/: PKG-INFO  SOURCES.txt
kanban-tui/tests/: test_board.py  test_storage.py
